recursion.hanoi.InterleavedHanoi.scala.error
Compilation error:
InterleavedHanoi:12: error: Unmatched closing brace '}' ignored here
  } 
  ^