recursion.hanoi.InterleavedHanoi.scala.code
def interleavedHanoi(height:Int, src1:Int, src2:Int, other:Int, dst:Int) {
    if (height ==1){ 
  	deplace(src, dst)
  }
  else {
    hanoi(height-1,src,dst,other)
    hanoi(1,src,other,dst)
    hanoi(height-1,other,src,dst)
  }
}
  }